Applying patch addressing PR comments